--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,13 @@ sample.log
 sample.fls
 sample.fdb_latexmk
 sample.pdf
+mmayer.aux
+mmayer.bbl
+mmayer.bcf
+mmayer.blg
+mmayer.fdb_latexmk
+mmayer.fls
+mmayer.log
+mmayer.out
+mmayer.pdf
+mmayer.run.xml
