--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -41,7 +41,7 @@ jobs:
           # LaTeX engine to be used
           # compiler: pdflatex # optional, default is latexmk
           # Extra arguments to be passed to the latex compiler
-          # args: ""
+          args: "-f -interaction=nonstopmode -file-line-error"
           # Install extra packages by apt-get
           # extra_system_packages: # optional
 
