--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -39,15 +39,15 @@ jobs:
           # The working directory for the latex compiler to be invoked
           working_directory: . # optional
           # LaTeX engine to be used
-          # compiler: pdflatex # optional, default is latexmk
+          compiler: pdflatex # optional, default is latexmk
           # Extra arguments to be passed to the latex compiler
-          args: -interaction=nonstopmode -file-line-error -auxdir=./out/ -outdir=./out/
+          args: -interaction=nonstopmode -file-line-error -jobname=cv -auxdir=./out/ -outdir=./out/
           # Install extra packages by apt-get
           # extra_system_packages: # optional
 
                         
       - name: Rename pdf
-        run: mv ./out/sample.pdf cv.pdf
+        run: mv ./out/cv.pdf cv.pdf
       
       - name: Create empty changelog
         run: |
