--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -39,7 +39,7 @@ jobs:
           # The working directory for the latex compiler to be invoked
           working_directory: . # optional
           # LaTeX engine to be used
-          compiler: pdflatex # optional, default is latexmk
+          # compiler: pdflatex # optional, default is latexmk
           # Extra arguments to be passed to the latex compiler
           args: -interaction=nonstopmode -file-line-error -jobname=cv -auxdir=./out/ -outdir=./out/
           # Install extra packages by apt-get
